Utworzono za pomocą Colaboratory

--- a/ML21_Walidacja_krzyżowa.ipynb
+++ b/ML21_Walidacja_krzyżowa.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO59SUmNwVo5ZXlrbw11A4K",
+      "authorship_tag": "ABX9TyN/7MALZ6s8cxggBjFXKxLp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Walidacja krzyżowa pomaga w ocenie modeli uczenia maszynowego. Ta metoda statystyczna pomaga w porównywaniu i wyborze modelu w stosowanym uczeniu maszynowym. Zrozumienie i wdrożenie tego problemu modelowania predykcyjnego jest łatwe i proste. Technika ta ma niższą tendencyjność podczas szacowania umiejętności modelu. Ten artykuł pomoże Ci zrozumieć koncepcję k-krotnej walidacji krzyżowej i jak możesz ocenić model uczenia maszynowego za pomocą tej techniki."
+        "Walidacja krzyżowa pomaga w ocenie modeli uczenia maszynowego. Ta metoda statystyczna pomaga w porównywaniu i wyborze modelu w stosowanym uczeniu maszynowym. Zrozumienie i wdrożenie tego problemu modelowania predykcyjnego jest łatwe i proste. Technika ta ma niższą tendencyjność podczas szacowania umiejętności modelu.\n",
+        "\n",
+        "K-krotna walidacja krzyżowa oznacza, że zbiór danych jest podzielony na K liczb. Dzieli ona zbiór danych w punkcie, w którym zestaw testowy wykorzystuje każdą fałdę. Zrozummy tę koncepcję z pomocą 5-krotnej walidacji krzyżowej lub K+5. W tym scenariuszu, metoda podzieli zbiór danych na pięć fałd. Model używa pierwszej fałdy w pierwszej iteracji do testowania modelu. Pozostałe zbiory danych są wykorzystywane do trenowania modelu. Druga fałda pomaga w testowaniu zbioru danych, a pozostałe wspierają proces szkolenia. Ten sam proces powtarza się aż do momentu, gdy zestaw testowy wykorzystuje każdą fałdę z pięciu fałd."
       ],
       "metadata": {
         "id": "O0I-0hiKdtUV"
