--- a/ML_KMeans_Titanic.ipynb
+++ b/ML_KMeans_Titanic.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "18CAsUq5KXe7vf4MljK9bYhQD1OKXCo57",
-      "authorship_tag": "ABX9TyNsajzCuaShhnKgSQVcajvl",
+      "authorship_tag": "ABX9TyMGJyWQssUuorch5Gnraxvd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1366,7 +1366,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####Reversal of mapping"
+        "####-- Reversal of mapping --"
       ],
       "metadata": {
         "id": "hi9_SQpClWp8"
